Fixed source link

--- a/GalaxyLore.html
+++ b/GalaxyLore.html
@@ -162,5 +162,8 @@
         The day will soon come when a new Empire will rise. For the
         sake of all, may the new Emperor have not only the power to
         seize the throne, but the strength to conquer the peace.
-        If not, I fear that a sea of desolation will drown us all.</div>
-        <div>Source: https://www.fantasyflightgames.com/en/products/twilight-imperium-fourth-edition/</div>
+        If not, I fear that a sea of desolation will drown us all.
+</div>
+<div>
+    <a href="https://www.fantasyflightgames.com/en/products/twilight-imperium-fourth-edition/">Source</a>
+</div>
